# SChem

./: LICENSE  README.md  __init__.py  components.py  elements.py  elements_data.py  game.py  grid.py  level.py  levels.py  molecule.py  reactor.py  requirements.txt  schem_random.py  setup.cfg  solution.py  spacechem_random.py  terrains.py  waldo.py
.github/workflows/: workflow.yml
schem/: __init__.py  __main__.py  _version.py  components.py  elements.py  exceptions.py  game.py  grid.py  level.py  levels.py  minimal-requirements.txt  molecule.py  precognition.py  requirements.txt  schem_random.py  solution.py  terrains.py  waldo.py
tests/: .gitignore  requirements.txt  test_data.py  test_game.py  test_molecule.py  test_performance.py  test_precognition.py  test_solution.py
tools/: derandomize.py  level_builder.py
