[metadata]
name = schem
version = 0.2.1
author = Zig
author_email = junknenopok@gmail.com
description = Clean Room implementation of the backend of SpaceChem (https://www.zachtronics.com/spacechem).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zig1000/SChem
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = schem
python_requires = >=3.7
install_requires =
    clipboard>=0.0.4
