[metadata]
name = schem
version = 0.6.7
author = Zig
author_email = junknenopok@gmail.com
description = Clean Room implementation of the backend of SpaceChem (https://www.zachtronics.com/spacechem).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spacechem-community-developers/SChem
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = schem
python_requires = >=3.7
install_requires =
    clipboard>=0.0.4
    numpy>=1.19.1
    rich>=9.13.0
    cursor>=1.3.4
